--- a/layouts/partials/lets-talk.html
+++ b/layouts/partials/lets-talk.html
@@ -1,57 +1,58 @@
 <div class="lets-talk">
-    <div class="d-flex justify-content-center align-items-center text-center">
-        <div>
-            LET’S BUILD WELL CRAFTED SOFTWARE TOGETHER
-        </div>
-        <div>
-            <button class="btn btn-primary">LETS TALK</button>
-        </div>
+  <div class="d-flex justify-content-center align-items-center text-center">
+    <div>LET’S BUILD WELL CRAFTED SOFTWARE TOGETHER</div>
+    <div>
+      <button class="btn btn-primary">LETS TALK</button>
     </div>
+  </div>
 </div>
 
 <style>
-    @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+  @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
+  .lets-talk {
+    background: #0e3252;
+    padding: 3em 0;
+
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    letter-spacing: 0.06em;
+
+    color: #ffffff;
+  }
+
+  .lets-talk > div > div {
+    margin-right: 40px;
+  }
+
+  .lets-talk .btn-primary {
+    background-color: #ffffff;
+    color: #0e3252;
+    border-color: #007bff;
+  }
+
+  .lets-talk .btn-primary:active,
+  .lets-talk .btn-primary:hover,
+  .lets-talk .btn-primary.focus,
+  .lets-talk .btn-primary.active {
+    background-color: #ffffff !important;
+    border-color: #007bff !important;
+  }
+
+  @media (max-width: 425px) {
     .lets-talk {
-        background: #0E3252;
-        padding: 3em 0;
-
-        font-style: normal;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 33px;
-        letter-spacing: 0.06em;
-
-        color: #FFFFFF;
-    }
-    .lets-talk>div>div {
-        margin-right: 40px;
+      font-size: 28px;
     }
 
-    .lets-talk .btn-primary {
-        background-color: #ffffff;
-        color: #0E3252;
-        border-color: #007bff;
+    .lets-talk > div {
+      flex-direction: column;
+      gap: 24px;
     }
 
-    .lets-talk .btn-primary:active,
-    .lets-talk .btn-primary:hover,
-    .lets-talk .btn-primary.focus,
-    .lets-talk .btn-primary.active {
-        background-color: #ffffff !important;
-        border-color: #007bff !important;
+    .lets-talk > div > div {
+      margin: 0;
     }
-
-    @media (max-width: 425px) {
-        .lets-talk {
-            font-size: 28px;
-        }
-        .lets-talk>div {
-            flex-direction: column;
-            gap: 24px
-        }
-        .lets-talk>div>div {
-            margin: 0;
-        }
-    }
+  }
 </style>
