fix: recommended case studies links

--- a/layouts/partials/recommend-case-study.html
+++ b/layouts/partials/recommend-case-study.html
@@ -8,7 +8,7 @@
           <div class="card-body">
             <h3 class="card-title">{{.Params.card_1_title}}</h3>
             <p class="card-text">{{.Params.card_1_desc}}</p>
-            <a class="btn btn-outline-custom" href="{{.Params.card_1_slug}}"
+                        <a class="btn btn-outline-custom" href="{{.Site.BaseURL}}blog/{{.Params.card_1_slug}}"
               >READ CASE STUDY</a
             >
           </div>
@@ -19,7 +19,7 @@
           <div class="card-body">
             <h3 class="card-title">{{.Params.card_2_title}}</h3>
             <p class="card-text">{{.Params.card_2_desc}}</p>
-            <a class="btn btn-outline-custom" href="{{.Params.card_2_slug}}"
+            <a class="btn btn-outline-custom" href="{{.Site.BaseURL}}blog/{{.Params.card_2_slug}}"
               >READ CASE STUDY</a
             >
           </div>
