feat: fix relative links

--- a/layouts/partials/finance-case-study.html
+++ b/layouts/partials/finance-case-study.html
@@ -185,7 +185,7 @@
       <h2 class="project-highlights-heading">PROJECT HIGHLIGHTS</h2>
 
       <div class="project-highlights-grid">
-        <a href="#highlight_1">
+        <a href="{{.Page.Permalink}}#highlight_1">
           <div class="item">
             <p class="index">1.</p>
             <p class="label">Problem discovery</p>
@@ -196,7 +196,7 @@
           </div>
         </a>
 
-        <a href="#highlight_2">
+        <a href="{{.Page.Permalink}}#highlight_2">
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Centralized system to access loan contracts</p>
@@ -207,7 +207,7 @@
           </div>
         </a>
 
-        <a href="#highlight_3">
+        <a href="{{.Page.Permalink}}#highlight_3">
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Addressing privacy concerns</p>
@@ -218,7 +218,7 @@
           </div>
         </a>
 
-        <a href="#highlight_4">
+        <a href="{{.Page.Permalink}}#highlight_4">
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Automating static, repeated checks</p>
@@ -229,7 +229,7 @@
           </div>
         </a>
 
-        <a href="#highlight_5">
+        <a href="{{.Page.Permalink}}#highlight_5">
           <div class="item">
             <p class="index">5.</p>
             <p class="label">Intuitive UI</p>
@@ -240,7 +240,7 @@
           </div>
         </a>
 
-        <a href="#highlight_6">
+        <a href="{{.Page.Permalink}}#highlight_6">
           <div class="item">
             <p class="index">6.</p>
             <p class="label">Lightweight system</p>
@@ -251,7 +251,7 @@
           </div>
         </a>
 
-        <a href="#highlight_7">
+        <a href="{{.Page.Permalink}}#highlight_7">
           <div class="item">
             <p class="index">7.</p>
             <p class="label">The road ahead</p>
