--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -146,7 +146,7 @@
       <h2 class="project-highlights-heading">PROJECT HIGHLIGHTS</h2>
 
       <div class="project-highlights-grid">
-        <a href="#highlight_1">
+        <a href="{{.Page.Permalink}}#highlight_1">
           <div class="item">
             <p class="index">1.</p>
             <p class="label">Creating the approach</p>
@@ -157,7 +157,7 @@
           </div>
         </a>
 
-        <a href="#highlight_2">
+        <a href="{{.Page.Permalink}}#highlight_2">
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Tackling the Frontend</p>
@@ -168,7 +168,7 @@
           </div>
         </a>
 
-        <a href="#highlight_3">
+        <a href="{{.Page.Permalink}}#highlight_3">
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Next Step, the Backend</p>
@@ -179,7 +179,7 @@
           </div>
         </a>
 
-        <a href="#highlight_4">
+        <a href="{{.Page.Permalink}}#highlight_4">
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Solution for Emails</p>
@@ -190,7 +190,7 @@
           </div>
         </a>
 
-        <a href="#highlight_5">
+        <a href="{{.Page.Permalink}}#highlight_5">
           <div class="item">
             <p class="index">5.</p>
             <p class="label">Support for RTL Languages</p>
