--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -180,7 +180,7 @@
       <h2 class="project-highlights-heading">PROJECT HIGHLIGHTS</h2>
 
       <div class="project-highlights-grid">
-        <a href="#highlight_1">
+        <a href="{{.Page.Permalink}}#highlight_1">
           <div class="item">
             <p class="index">1.</p>
             <p class="label">
@@ -193,7 +193,7 @@
           </div>
         </a>
 
-        <a href="#highlight_2">
+        <a href="{{.Page.Permalink}}#highlight_2">
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Automation, Automation, Automation</p>
@@ -204,7 +204,7 @@
           </div>
         </a>
 
-        <a href="#highlight_3">
+        <a href="{{.Page.Permalink}}#highlight_3">
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Cloud Infrastructure</p>
@@ -215,7 +215,7 @@
           </div>
         </a>
 
-        <a href="#highlight_4">
+        <a href="{{.Page.Permalink}}#highlight_4">
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Observability And Monitoring</p>
