--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -160,7 +160,7 @@
         <a href="{{.Page.Permalink}}#highlight_2">
           <div class="item">
             <p class="index">2.</p>
-            <p class="label">Tackling the Frontend</p>
+            <p class="label">Tackling the frontend</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -171,7 +171,7 @@
         <a href="{{.Page.Permalink}}#highlight_3">
           <div class="item">
             <p class="index">3.</p>
-            <p class="label">Next Step, the Backend</p>
+            <p class="label">Next step, the backend</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -182,7 +182,7 @@
         <a href="{{.Page.Permalink}}#highlight_4">
           <div class="item">
             <p class="index">4.</p>
-            <p class="label">Solution for Emails</p>
+            <p class="label">Solution for emails</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -193,7 +193,7 @@
         <a href="{{.Page.Permalink}}#highlight_5">
           <div class="item">
             <p class="index">5.</p>
-            <p class="label">Support for RTL Languages</p>
+            <p class="label">Support for RTL languages</p>
             <img
               style="width: 28px; height: auto; align-self: start"
               src="{{ .Params.right_arrow |relURL }}"
@@ -213,23 +213,13 @@
       </p>
 
       <p class="paragraph-body">
-        To ensure all content is delivered in the language of the user’s
-        location, there needs to be a framework that supports retrieving the
-        content in the appropriate language.
+        Since language is a crucial aspect affecting user experience, we needed a proper strategy to retrieve content in the target language based on user location.
       </p>
 
       <p class="paragraph-body">
-        Our approach was to extract the strings of content, save their
-        translations, and serve this translated version to the end user. To
-        achieve this, we set up several steps in the frontend, backend, and
-        database.
+        Our approach was to extract the strings of content, save their translations, and serve this translated version to the end user. To achieve this, we set up several steps in the frontend, backend, and database. We also made our solution user-friendly by translating emails and supporting right-to-left languages to enhance user experience.
       </p>
 
-      <p class="paragraph-body">
-        As part of the strategy to enhance user experience, we also made our
-        solution more user-friendly by translating emails and supporting
-        right-to-left languages.
-      </p>
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_2">
@@ -242,27 +232,17 @@
         language preference.
       </p>
       <p class="paragraph-body">
-        The first step in tackling the content embedded in the UI was to move it
-        from code to simple text files so that, down the line, introducing new
-        languages can become as easy as replicating the flat file in a different
-        language.
+        The first step in tackling the UI-embedded content was to move it from code to simple text files. This helps simplify the process of introducing new languages in the future. A new language can be added simply by replicating the flat file in a different language.
       </p>
       <p class="paragraph-body">
-        We used JSON files to separate code from the language embedded in it. We
-        did this so that all the content is available in one place and a
-        translation service can easily translate this content.
+        We used JSON files to separate code from the language embedded in it. Doing so ensures all content is available in one place, and a translation service can easily translate this content.
       </p>
       <p class="paragraph-body">
-        The next step we took involved generalizing all hardcoded words to use
-        dynamically changing content based on the user’s location, for instance,
-        displaying helplines based on the user’s locality.
+        In a global solution, there is a need for customized content based on the user’s location. In addition to generalizing common and hard coded content, helpline numbers are dynamically displayed based on user location to ensure users get the correct information. 
+
       </p>
       <p class="paragraph-body">
-        Lastly, we introduced Crowdin, a third-party translation provider, to
-        get translations for new languages. To extend this further, we
-        integrated Crowdin with GitHub PR workflow so that the automated
-        pipelines can handle the translations without manual intervention from a
-        developer.
+        Lastly, we introduced Crowdin, a third-party translation provider, to get translations for new languages. To extend this further, we integrated Crowdin with GitHub PR workflow so that the automated pipelines can handle the translations without a developer’s manual intervention, saving time for the team. 
       </p>
     </div>
 
@@ -272,24 +252,16 @@
       </h3>
 
       <p class="paragraph-body mt-3">
-        In the backend, we maintained consistency and took similar steps to
-        those in the frontend, ensuring no disruption to the user experience.
+        Maintaining consistency is vital in development, so we took similar steps in the backend to those in the frontend, ensuring a seamless user experience without disruptions.
       </p>
       <p class="paragraph-body">
-        Since language is one of the most crucial aspects affecting the user’s
-        experience, we needed a proper strategy to present various puzzle pieces
-        such as web and database content.
+        We configured the application to deliver localized content based on the user’s language preferences. 
       </p>
       <p class="paragraph-body">
-        The content served from the database was passed to the frontend directly
-        without any translations. To change this, we configured the application
-        to serve the translated data content to make this process seamless and
-        used YAML files to store this translated data.
+        Initially, all content was retrieved directly from the database and passed to the frontend in English. As new languages were introduced, we made the necessary adjustments to the application to serve the translated data content instead.
       </p>
       <p class="paragraph-body">
-        In the backend too, we configured the application to serve localized
-        content based on the user’s language preferences. For database
-        translations, we used Crowdin here as well.
+        For translations, we opted for a hybrid of database and YAML files for serving translated content, using Crowdin as our choice tool for providing translations.
       </p>
     </div>
     <div class="text-container">
@@ -310,10 +282,10 @@
       </p>
       <p class="paragraph-body">
         In the future, our client's marketing team can effortlessly launch
-        events and email campaigns with these easy-to-edit templates.
+        events and email campaigns with these editable templates.
       </p>
       <p class="paragraph-body">
-        For our client, this meant a better overall experience as well. Mails
+        For our client, this meant a better overall experience. Mails
         are now translated and can be modified without a dependency on the
         developer, removing a significant bottleneck for the client's marketing
         team.
@@ -325,31 +297,22 @@
       </h3>
 
       <p class="paragraph-body mt-3">
-        While the application empowered users by enhancing language
-        accessibility, the support for right-to-left (RTL) languages felt
-        natural and intuitive.
+        While the application empowered users to access content in their preferred language, supporting RTL language was the natural next step.
       </p>
       <p class="paragraph-body">
-        The support for RTL languages was meticulously designed so that language
-        barriers did not limit users. In fact, we identified the various
-        elements and interactions to support RTL languages and incorporated them
-        into the application.
+        For right-to-left languages such as Arabic, the UI usually appears mirrored. Based on this factor, we identified the elements that would appear mirrored to ensure an intuitive user experience.
       </p>
       <p class="paragraph-body">
-        Moreover, we also added support for bidirectional text and icons, which
-        are essential for RTL languages. These features ensure that users can
-        read and navigate through the application seamlessly without any
-        confusion.
+        Bidirectionality is an integral part of the UI to support RTL content. An instance of this would be the direction of the arrow that indicates the back button in RTL languages. To accommodate this, we added bidirectional text and icons configured to mirror depending on the language needs. 
       </p>
       <p class="paragraph-body">
-        We also incorporated smart exceptions based on the content type. With
-        these enhancements, users can access a broader range of content in their
-        preferred language and enjoy an unparalleled experience while using the
-        application.
+        At the same time, content types such as images appear the same irrespective of language. For this content, we added smart exceptions as they don’t adhere to RTL styling rules. The same applies to specific icons that don’t hold directional meaning.
       </p>
       <p class="paragraph-body">
-        Overall, these improvements transformed our solution into a robust tool
-        that met the diverse needs of each end-user.
+        Overall, the steps we took, such as translating English to RTL language and UI mirroring, transformed our solution into a robust tool that met the diverse needs of each end-user.
+      </p>
+      <p class="paragraph-body">
+        *All the metrics in this case study are accurate as of the time of publishing.
       </p>
     </div>
   </div>
