--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -26,11 +26,11 @@
                         <h2><a href="{{ .Permalink }}" title="{{ .Title }}" class="post-title">{{ .Title }}</a></h2>
                         {{ range .Params.tags }}
                         <span class="mb-1 badge rounded-pill bg-dark"> <a class="text-white"
-                                                                          href="/tags/{{ . | urlize }}">{{ . }}</a></span>
+                                href="/tags/{{ . | urlize }}">{{ . }}</a></span>
                         {{ end }}
                         <p class="card-text">{{ .Summary }}</p>
-                        <a href="{{.Permalink}}" title="{{ i18n " readmore" }} -
-                        {{ .Title }}" class="btn btn-main-art btn-primary">{{ i18n "readmore" }}</a>
+                        <a href="{{.Permalink}}" title="{{ i18n " readmore" }} - {{ .Title }}"
+                            class="btn btn-main-art btn-primary">{{ i18n "readmore" }}</a>
                     </div>
                 </article>
             </div>
@@ -49,7 +49,11 @@
                         {{ range .Params.tags }}
                         <span class="badge rounded-pill bg-dark"> <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
                         {{ end }}
-                        <p class="card-text">{{ .Summary }}
+                        <p class="card-text">{{ .Summary }} </p>
+                        <p class="blockquote-footer text-right">
+                            By {{range .Params.authors}}
+                            <a href="/authors/{{ . | urlize }}">{{ . }}</a>, {{ end }} on {{
+                            .Date.Format "January 2, 2006"}}
                         </p>
                     </div>
                 </article>
