feat: add min height to card images

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -84,13 +84,13 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     padding: 8px 50px;
   }
 
-  @media (max-width: 991px) {  
+  @media (max-width: 991px) {
     .navigation-bar {
       padding: 8px 20px;
     }
   }
 
-  @media (max-width: 400px) {  
+  @media (max-width: 400px) {
     .navigation-bar {
       padding: 8px 10px;
     }
@@ -115,6 +115,7 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
 
   .card-img {
     aspect-ratio: auto;
+    min-height: 180px;
   }
 
   .display-3 {
