dark mode re-added

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -94,6 +94,10 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     .navigation-bar {
       padding: 8px 10px;
     }
+    
+    .theme-toggle {
+      display: none;
+    }
   }
 
   .navbar-brand {
