--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,9 +14,9 @@
             </button> -->
 
             <div class="collapse navbar-collapse text-center" id="navigation">
-                <!-- <div>
+                <div>
                     <i class="fas theme-toggle p-2" id="theme-toggle-btn"></i>
-                </div> -->
+                </div>
                 {{ if site.Params.navigation_button.enable }}
                 {{ with site.Params.navigation_button }}
                 <a href="{{ .link | relLangURL }}" title="{{ .label }}" class="big-btn btn btn-sm ml-3">{{ .label }}</a>
