fix: testimonial section

--- a/layouts/partials/finance-case-study.html
+++ b/layouts/partials/finance-case-study.html
@@ -27,11 +27,7 @@
       </div>
     </div>
     <div class="banner-container bg-catscolor">
-      <img
-        class="img_small"
-        src="{{ .Params.banner_image |relURL }}"
-        alt="{{ .Title }}"
-      />
+      <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}" />
     </div>
     <div class="text-container">
       <h2 class="section-heading">BACKGROUND</h2>
@@ -82,11 +78,8 @@
       <div class="what-we-did-container">
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_1 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_1 |relURL }}" />
           </div>
           <p class="label">
             Having a centralized system where agents can access all the loan
@@ -96,11 +89,8 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_2 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_2 |relURL }}" />
           </div>
           <p class="label">
             Frequently deploying new updates and maintaining an average release
@@ -110,11 +100,8 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_3 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_3 |relURL }}" />
           </div>
           <p class="label">
             Automating all manual checks, saving up to 4000 manual hours for 800
@@ -124,11 +111,8 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_4 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_4 |relURL }}" />
           </div>
           <p class="label">
             Transforming more than five departments, thanks to the success of
@@ -138,11 +122,8 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_5 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_5 |relURL }}" />
           </div>
           <p class="label">
             Improving the entire banking process, leading to immense client
@@ -152,11 +133,8 @@
       </div>
     </div>
     <div class="banner-container bg-deep_blue text-center testimonial">
-      <div class="inner">
-        <img
-          style="width: 62px; height: auto; margin-bottom: -20px"
-          src="{{ .Params.open_quote |relURL }}"
-        />
+      <div class="inner" style="padding: 0px 25px">
+        <img style="width: 62px; height: auto" src="{{ .Params.open_quote |relURL }}" />
         <p class="paragraph-body text-white text">
           We've engaged Incubyte for two internal initiatives - one, to build
           applications to support & optimize our internal processes and two, to
@@ -169,16 +147,11 @@
           implementation expertise and best software development practices, and
           its been a pleasure working with them.
         </p>
-        <img
-          style="width: 62px; height: auto; align-self: end; margin-top: -20px"
-          src="{{ .Params.close_quote |relURL }}"
-        />
+        <img style="width: 62px; height: auto; align-self: end; margin-top: -20px"
+          src="{{ .Params.close_quote |relURL }}" />
       </div>
-      <img
-        class="rounded-circle"
-        style="width: 62px; height: 62px; background: #d9d9d9 !important"
-        src="{{ .Params.testimonial_person |relURL }}"
-      />
+      <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+        src="{{ .Params.testimonial_person |relURL }}" />
       <p class="label text-white name">SVP at a Consumer Finance Lender, TX</p>
     </div>
     <div class="text-container">
@@ -189,10 +162,7 @@
           <div class="item">
             <p class="index">1.</p>
             <p class="label">Problem discovery</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -200,10 +170,7 @@
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Centralized system to access loan contracts</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -211,10 +178,7 @@
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Addressing privacy concerns</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -222,10 +186,7 @@
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Automating static, repeated checks</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -233,10 +194,7 @@
           <div class="item">
             <p class="index">5.</p>
             <p class="label">Intuitive UI</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -244,10 +202,7 @@
           <div class="item">
             <p class="index">6.</p>
             <p class="label">Lightweight system</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -255,10 +210,7 @@
           <div class="item">
             <p class="index">7.</p>
             <p class="label">The road ahead</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
       </div>
@@ -424,12 +376,11 @@
       </p>
     </div>
   </div>
-  {{ partial "recommend-case-study.html" . }}
-  {{ partial "lets-talk.html" . }}
+  {{ partial "recommend-case-study.html" . }} {{ partial "lets-talk.html" . }}
 </div>
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
 
   .template-container {
     margin: 0 50px 0 50px;
@@ -440,7 +391,7 @@
   }
 
   .case-study {
-    font-family: 'Nunito Sans', serif !important;
+    font-family: "Nunito Sans", serif !important;
   }
 
   .case-study p,
@@ -448,7 +399,7 @@
   h2,
   h3,
   h4 {
-    font-family: 'Nunito Sans', serif !important;
+    font-family: "Nunito Sans", serif !important;
   }
 
   .text-container {
@@ -494,11 +445,11 @@
     min-width: 200px !important;
   }
 
-  .stats > p {
+  .stats>p {
     margin: 0;
   }
 
-  .stats > p:first-child {
+  .stats>p:first-child {
     color: #0e3252;
     font-size: 60px;
     line-height: 32px;
@@ -571,7 +522,7 @@
     background-color: #f1f1f1;
   }
 
-  .banner-container > img {
+  .banner-container>img {
     width: 100%;
     margin: 0 auto 0 auto;
     display: flex;
@@ -588,7 +539,7 @@
     margin-bottom: 20px;
   }
 
-  .details-box > p {
+  .details-box>p {
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
@@ -596,7 +547,7 @@
     margin: 0;
   }
 
-  .details-box > p:first-child {
+  .details-box>p:first-child {
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
@@ -645,14 +596,14 @@
     justify-content: space-between;
   }
 
-  .what-we-did-container > .item {
+  .what-we-did-container>.item {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
     align-items: center;
   }
 
-  .what-we-did-container > .item > .label {
+  .what-we-did-container>.item>.label {
     color: black;
     font-style: normal;
     font-weight: 400;
@@ -663,7 +614,7 @@
     margin: auto;
   }
 
-  .what-we-did-container > .item > .index {
+  .what-we-did-container>.item>.index {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -696,8 +647,8 @@
     grid-template-rows: repeat(2, 1fr);
     gap: 0 0;
     grid-template-areas:
-      'item item'
-      'item item';
+      "item item"
+      "item item";
   }
 
   @media (max-width: 991px) {
@@ -706,10 +657,10 @@
       grid-template-rows: repeat(4, 1fr);
       gap: 0 0;
       grid-template-areas:
-        'item'
-        'item'
-        'item'
-        'item';
+        "item"
+        "item"
+        "item"
+        "item";
     }
 
     .testimonial .inner {
@@ -767,19 +718,19 @@
       font-size: 16px;
     }
 
-    .stats > p:first-child {
+    .stats>p:first-child {
       font-size: 48px;
     }
   }
 
-  .project-highlights-grid > a > .item {
+  .project-highlights-grid>a>.item {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
     align-items: flex-baseline;
   }
 
-  .project-highlights-grid > a > .item > .index {
+  .project-highlights-grid>a>.item>.index {
     font-size: 24px;
     font-weight: 700;
     line-height: 24px;
@@ -788,7 +739,7 @@
     color: black;
   }
 
-  .project-highlights-grid > a > .item > .label {
+  .project-highlights-grid>a>.item>.label {
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
