fix: testimonial section for monnai case study

--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -31,11 +31,7 @@
       </div>
     </div>
     <div class="banner-container bg-monnai_blue">
-      <img
-        class="img_small"
-        src="{{ .Params.banner_image |relURL }}"
-        alt="{{ .Title }}"
-      />
+      <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}" />
     </div>
     <div class="text-container">
       <h2 class="section-heading">BACKGROUND</h2>
@@ -72,22 +68,16 @@
       <div class="what-we-did-container">
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_1 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_1 |relURL }}" />
           </div>
           <p class="label">Go to market in three months</p>
         </div>
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_2 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_2 |relURL }}" />
           </div>
           <p class="label">
             The ability to respond quickly to feedback from potential customers
@@ -96,22 +86,16 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_3 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_3 |relURL }}" />
           </div>
           <p class="label">Onboarding their first customer within six months</p>
         </div>
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_4 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_4 |relURL }}" />
           </div>
           <p class="label">
             Sustained frequent releases to ensure the product evolved rapidly
@@ -121,22 +105,16 @@
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_5 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_5 |relURL }}" />
           </div>
           <p class="label">An amazing team morale</p>
         </div>
 
         <div class="item">
           <div class="rounded-circle bg-secondary">
-            <img
-              class="rounded-circle"
-              style="width: 62px; height: 62px; background: #d9d9d9 !important"
-              src="{{ .Params.what_we_did_icon_6 |relURL }}"
-            />
+            <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+              src="{{ .Params.what_we_did_icon_6 |relURL }}" />
           </div>
           <p class="label">
             $6.5 million of funding in just one year of going live.
@@ -145,11 +123,8 @@
       </div>
     </div>
     <div class="banner-container bg-deep_blue text-center testimonial">
-      <div class="inner">
-        <img
-          style="width: 62px; height: auto; margin-bottom: -20px"
-          src="{{ .Params.open_quote |relURL }}"
-        />
+      <div class="inner" style="padding: 0px 25px">
+        <img style="width: 62px; height: auto" src="{{ .Params.open_quote |relURL }}" />
         <p class="paragraph-body text-white text">
           We went from an initial call with Incubyte to starting work in under
           15 days and from an idea to a working MVP in just three months. They
@@ -164,16 +139,11 @@
           Incubyte and would recommend them as engineering partners for any
           start-up launching new products.
         </p>
-        <img
-          style="width: 62px; height: auto; align-self: end; margin-top: -20px"
-          src="{{ .Params.close_quote |relURL }}"
-        />
+        <img style="width: 62px; height: auto; align-self: end; margin-top: -20px"
+          src="{{ .Params.close_quote |relURL }}" />
       </div>
-      <img
-        class="rounded-circle"
-        style="width: 62px; height: 62px; background: #d9d9d9 !important"
-        src="{{ .Params.testimonial_person |relURL }}"
-      />
+      <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
+        src="{{ .Params.testimonial_person |relURL }}" />
       <p class="label text-white name">Ravish Patel, Co-founder at Monnai</p>
     </div>
     <div class="text-container">
@@ -186,10 +156,7 @@
             <p class="label">
               Defining A Vision For The Product And The Partnership
             </p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -197,10 +164,7 @@
           <div class="item">
             <p class="index">2.</p>
             <p class="label">Automation, Automation, Automation</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -208,10 +172,7 @@
           <div class="item">
             <p class="index">3.</p>
             <p class="label">Cloud Infrastructure</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
 
@@ -219,10 +180,7 @@
           <div class="item">
             <p class="index">4.</p>
             <p class="label">Observability And Monitoring</p>
-            <img
-              style="width: 28px; height: auto; align-self: start"
-              src="{{ .Params.right_arrow |relURL }}"
-            />
+            <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
           </div>
         </a>
       </div>
@@ -272,11 +230,7 @@
       </p>
     </div>
     <div class="banner-container bg-grey">
-      <img
-        class="img_small"
-        src="{{ .Params.image_1 |relURL }}"
-        alt="productivity pattern of a growing company"
-      />
+      <img class="img_small" src="{{ .Params.image_1 |relURL }}" alt="productivity pattern of a growing company" />
     </div>
     <div class="text-container">
       <h3 class="project-highlights-subheading mt-4" id="highlight_2">
@@ -491,11 +445,11 @@
     min-width: 200px !important;
   }
 
-  .stats > p {
+  .stats>p {
     margin: 0;
   }
 
-  .stats > p:first-child {
+  .stats>p:first-child {
     color: #0e3252;
     font-size: 60px;
     line-height: 32px;
@@ -568,7 +522,7 @@
     background-color: #f1f1f1;
   }
 
-  .banner-container > img {
+  .banner-container>img {
     width: 100%;
     margin: 0 auto 0 auto;
     display: flex;
@@ -585,7 +539,7 @@
     margin-bottom: 20px;
   }
 
-  .details-box > p {
+  .details-box>p {
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
@@ -593,7 +547,7 @@
     margin: 0;
   }
 
-  .details-box > p:first-child {
+  .details-box>p:first-child {
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
@@ -623,14 +577,14 @@
     justify-content: space-between;
   }
 
-  .what-we-did-container > .item {
+  .what-we-did-container>.item {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
     align-items: center;
   }
 
-  .what-we-did-container > .item > .label {
+  .what-we-did-container>.item>.label {
     color: black;
     font-style: normal;
     font-weight: 400;
@@ -641,7 +595,7 @@
     margin: auto;
   }
 
-  .what-we-did-container > .item > .index {
+  .what-we-did-container>.item>.index {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -737,19 +691,19 @@
       font-size: 16px;
     }
 
-    .stats > p:first-child {
+    .stats>p:first-child {
       font-size: 48px;
     }
   }
 
-  .project-highlights-grid > a > .item {
+  .project-highlights-grid>a>.item {
     display: flex;
     justify-content: flex-start;
     gap: 16px;
     align-items: flex-baseline;
   }
 
-  .project-highlights-grid > a > .item > .index {
+  .project-highlights-grid>a>.item>.index {
     font-size: 24px;
     font-weight: 700;
     line-height: 24px;
@@ -758,7 +712,7 @@
     color: black;
   }
 
-  .project-highlights-grid > a > .item > .label {
+  .project-highlights-grid>a>.item>.label {
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
